Working on structure and styling.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
           crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Script-->
+    <!--Chart Script-->
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="body">
@@ -19,7 +19,7 @@
             <div class="logo">
                 <div>
                     <div>
-                        <a href="#firstPage">
+                        <a href="#home-page">
                             <h1>FootPrint</h1>
                             <h3>Logger</h3>
                         </a>
@@ -30,15 +30,15 @@
             <nav>
                 <ul id="primary-navigation"  class="primary-navigation" >
                     <li class="nav-item"><a id="nav-link" class="nav-link" href="#info-page">INFORMATION</a></li>
-                    <li class="nav-item"><a id="nav-link2" class="nav-link" href="#logging-Page">LOGGING</a></li>
-                    <li class="nav-item"><a id="nav-link3" class="nav-link" href="#tips-Page">TIPS</a></li>
+                    <li class="nav-item"><a id="nav-link2" class="nav-link" href="#logging-page">LOGGING</a></li>
+                    <li class="nav-item"><a id="nav-link3" class="nav-link" href="#tips-page">TIPS</a></li>
                 </ul>
             </nav>
         </div>
     </header> 
 
     <main style="position: relative">
-        <section id="home-Page" class="homePage pageSection">
+        <section id="home-page" class="homePage pageSection">
             <div class="home-page-main-text">
                 <div class="home-page-heading">
                     <h1>Footprint</h1>
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <section id="logging-Page" class="logging-page pageSection">
+        <section id="logging-page" class="logging-page pageSection">
             <h1 class="pageHeading">Track Your Carbon Footprint</h1>
             <div class="logging-main-content">
                 <div class="user-inputs">
@@ -152,7 +152,7 @@
             </div>
         </section>   
         
-        <section id="tips-Page" class="tipsPost-Page tip-Page pageSection">
+        <section id="tips-page" class="tipsPost-Page tip-Page pageSection">
             <h1 class="pageHeading">Tips</h1>
             <p class="tip-page-slogan">Heal the world, make it a better place for you and for me and the entire human race.</p>
             <div class="scroll-container">
@@ -311,19 +311,19 @@
 
                 <ul class="site-footer-links">
                     <li class="site-footer-link-item">
-                        <a href="#home-Page" class="site-footer-link">HOME</a>
+                        <a href="#home-page" class="site-footer-link">HOME</a>
                     </li>
 
                     <li class="site-footer-link-item">
-                        <a href="#info-Page" class="site-footer-link">INFORMATION</a>
+                        <a href="#info-page" class="site-footer-link">INFORMATION</a>
                     </li>
 
                     <li class="site-footer-link-item">
-                        <a href="#logging-Page" class="site-footer-link">LOGGING</a>
+                        <a href="#logging-page" class="site-footer-link">LOGGING</a>
                     </li>
 
                     <li class="site-footer-link-item">
-                        <a href="#tips-Page" class="site-footer-link">TIPS</a>
+                        <a href="#tips-page" class="site-footer-link">TIPS</a>
                     </li>
                 </ul>
             </div>
@@ -348,7 +348,7 @@
         </p>
     </footer>
 
-    <!-- Script-->
+    <!--Functionality Script-->
     <script src="src/footprint.js" defer></script>
 </body>
 </html>
