Made changes to the images.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footprint Logger</title>
-    <link rel="shortcut icon" type="x-icon" href="">
+    <link rel="shortcut icon" type="x-icon" href="Images/carbon-footprint-logo.webp">
     <link rel="stylesheet" href="styles.css">
     <!--font awesome CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
@@ -302,7 +302,7 @@
             <div>
                 <h2>Powered By</h2>
                 <a target="_blank" href="">
-                    <img src="" alt="">
+                    <img src="Images/localstorage-feature.webp" alt="JS localstorage API image" style="width: 150px;">
                 </a>
             </div>
 
