Fixed not working button.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1>Logger</h1>
                 </div>
                 <p>Track your daily impact. <br> Reduce your carbon footprint.</p>
-                <a href="#logging-Page">
+                <a href="#logging-page">
                     <button>Start Logging</button>
                 </a>
             </div>
