--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - Footprint Logger</title>
   <link rel="stylesheet" href="login.css" />
+ 
 </head>
 <body>
   <div class="login-container">
@@ -16,10 +17,10 @@
       <button type="submit">Login</button>
     </form>
     <div class="register-link">
-      Don’t have an account? <a href="register.html">Register</a>
+      Don't have an account? <a href="register.html">Register</a>
     </div>
   </div>
 
-  <script src="js/auth.js"></script>
+  <script src="src/auth.js"></script>
 </body>
 </html>
