--- a/login.html
+++ b/login.html
@@ -20,8 +20,11 @@
     <div class="register-link">
       Don't have an account? <a href="register.html">Register</a>
     </div>
+    <!-- <a href="index.html">       
+        <button type="button">Login as a Guest</button>
+    </a> -->
   </div>
 
-  <script src="src/auth.js"></script>
+  <script src="src/login.js"></script>
 </body>
 </html>
