Fixed the file structure.

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="x-icon" href="Images/carbon-footprint-logo.webp">
   <title>Login - Footprint Logger</title>
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="css/login.css" />
  
 </head>
 <body>
@@ -16,6 +16,7 @@
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
+      <p id="error-message" style="color:red; display:none;"></p>
     </form>
     <div class="register-link">
       Don't have an account? <a href="register.html">Register</a>
