--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register - Footprint Logger</title>
-  <link rel="stylesheet" href="register.css" />
+  <link rel="stylesheet" href="css/register.css" />
 
 </head>
 <body>
@@ -16,6 +16,7 @@
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Register</button>
+      <p id="error-message" style="color:red; display:none;"></p>
     </form>
     <div class="login-link">
       Already have an account? <a href="login.html">Login</a>
