--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
                     </div>
 
                     <h2>Activities</h2>
-                     <div id="activity-log-container"></div>
+                    <div id="activity-log-container"></div>
+
+                    <h2>Leaderboard</h2>
+                    <div id="leaderboard"></div>
+
                 </div>
                 <div class="visualization">
                     <div class="total-section">
