Worked on updating the styling.

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="login-container">
+    <img src="Images/login-image.png" alt="login illustration">
     <h2>Login</h2>
     <div id="error-message" class="error"></div>
     <form id="login-form">
@@ -24,6 +25,19 @@
     <!-- <a href="index.html">       
         <button type="button">Login as a Guest</button>
     </a> -->
+  </div>
+
+  <div>
+    <img src="Images/carbon-footprint-logo.webp" alt="footprint logger logo">
+    <h1></h1>
+    <p>Welcome to your journey to making the would a better place</p>
+
+    <h1>impact starts with a small action from you</h1>
+
+    <p>we look forward to helping you with tracking, analysing and 
+      redusing your carbon footprint with intelligent insights and 
+      actionable recommandations tailored just for you
+    </p>
   </div>
 
   <script src="src/login.js"></script>
