Updated the registration page styling.

--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="register-container">
+    <img class="register-image" src="Images/registration-image.png" alt="register illustration">
     <h2>Create Account</h2>
     <div id="error-message" class="error"></div>
     <form id="register-form">
