Updated the header styling.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
 
             <div id="user-info" class="user-info">
-                <!-- Will be populated by JS -->
+                <!-- populated by JS -->
             </div>
         </div>
     </header> 
