Updated the responsive design.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
                     <li class="nav-item"><a id="nav-link" class="nav-link" href="#info-page">INFORMATION</a></li>
                     <li class="nav-item"><a id="nav-link2" class="nav-link" href="#logging-page">LOGGING</a></li>
                     <li class="nav-item"><a id="nav-link3" class="nav-link" href="#tips-page">TIPS</a></li>
+
+                    <div id="user-info" class="user-info">
+                        <!-- populated by JS -->
+                    </div>
                 </ul>
             </nav>
 
-            <div id="user-info" class="user-info">
-                <!-- populated by JS -->
+            <div id="menu-toggle" class="menu-toggle">
+                <i class="fa fa-bars"></i>
             </div>
+
         </div>
     </header> 
 
