Updated the footer styling.

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
         <div class="container">
            
-            <div>
+            <div class="powered-by">
                 <h2>Powered By</h2>
                 <a target="_blank" href="">
                     <img src="Images/localstorage-feature.webp" alt="JS localstorage API image" style="width: 150px;">
